--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,16 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <script type="module" src="/src/main.js"></script>
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Mon Application Vue</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Mon Application Vue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <script src="/dist/chunk-vendors.[contenthash].js"></script>
-    <script src="/dist/app.[contenthash].js"></script>
-    <!-- built files will be auto injected -->
+    <script src="<%= BASE_URL %>js/chunk-vendors.[contenthash].js"></script>
+    <script src="<%= BASE_URL %>js/app.[contenthash].js"></script>
   </body>
 </html>
